# maress

./: .gitignore  .gitlab-ci.yaml  CITATION.cff  LICENSE  MAINTAINER_GUIDE.md  README.md  codebook.toml  config.ini  docker-compose.prod.yml  docker-compose.yml  env.example  lhb-article.md  main.py  nfdi4earth-meta.yaml  pyproject.toml
backend/: .gitignore  Dockerfile  README.md  codebook.toml  maress_types.py  pyproject.toml
backend/app/: celery_app.py  crud.py  main.py  models.py  services.py  utils.py
backend/app/alembic/: env.py
backend/app/alembic/versions/: 00f24d2acc42_fix_reverse_set_mapped_on_collection_.py  158446531954_itemupdate_model_fixed_plus_attachment_.py  1c39c9bc69e5_itemupdate_model_fixed_plus_attachment_.py  1c6df94c3d7d_feat_add_timestamps_created_at_and_.py  1e5741a3fda5_move_relationships_to_itembase.py  21d6b69f6935_feat_item_one_to_many_studysite_drop_.py  2ff8c4ae9b03_itemupdate_model_fixed_plus_attachment.py  38a988624128_itemupdate_model_fixed_plus_attachment_.py  3f3ce9470d6b_fix_optionality_and_defaults_of_some_.py  40b3bdfca28e_change_abstract_length.py  41903b127a2c_feat_full_db_migrations_end_of_.py  4ab975846099_fix_optionality_and_defaults_of_date_.py  5f342b95bfff_itemupdate_model_fixed_plus_attachment_.py  668fa8d68d41_fix_set_mapped_on_collection_reference.py  6be10c6dc765_itemupdate_model_fixed_plus_attachment_.py  6c06cc0e3f1e_itemupdate_model_fixed_plus_attachment_.py  6d294d7ec742_update_datetime_handling_for_items.py  72d7480a401f_fix_add_server_defaults_to_timestamp_.py  7e7fb2e498c2_fix_split_studysite_and_location.py  8676cba409d5_fix_optionality_and_defaults_of_.py  8d2b789202d3_fix_optionality_and_defaults_of_date_.py  9132f9260870_add_helper_models_for_helper_tables.py  935fdf0c43c9_fix_add_server_defaults_to_timestamp_.py  93f886825fcb_fix_optionality_and_defaults_of_some_.py  9ea76974bf6a_fix_optionality_and_default_of_doi_.py  a8eda1bd5b2f_itemupdate_model_fixed_plus_attachment_.py  ab20fceea8f0_add_zotero_tables_and_columns.py  ab2f9223b222_fix_foreign_key_types_for_item_id.py  af33e6b33c83_update_datetime_handling_for_items.py  b4df1114854e_itemupdate_model_fixed_plus_attachment_.py  bd36ce023756_longer_dates_allowed.py  c031ba4c6a18_fix_set_clustercoordinate_default_name_.py  c5cc7425d89d_itemupdate_model_fixed_plus_attachment.py  c61a8575c36b_feat_add_cluster_label_field.py  ca52ed9d89c2_fix_optionality_and_defaults_for_some_.py  cd7f00fcaf8f_add_helper_models_for_helper_tables.py  eb47e9f6152c_fix_reverse_set_mapped_on_collection_.py  ef6303cfa987_add_zotero_tables_and_columns.py  f03f709f68b5_fix_optionality_and_defaults_of_some_.py  f2814ce488c0_itemupdate_model_fixed_plus_attachment_.py  (+2 more)
backend/app/api/: deps.py  main.py
backend/app/api/routes/: STUDY_SITES_API.md  collections.py  creators.py  items.py  login.py  private.py  relations.py  study_sites.py  tags.py  users.py  utils.py
backend/app/core/: config.py  db.py  security.py
backend/app/models/: __init__.py  authors.py  collections.py  creators.py  factories.py  items.py  links.py  relations.py  study_sites.py  tags.py  tasks.py  tokens.py  users.py
backend/app/nlp/: ARCHITECTURE_IMPROVEMENT.md  __init__.py  adapters.py  clustering.py  confidence_scorer.py  context_extraction.py  domain_models.py  extractors.py  factories.py  find_my_home.py  first_test.py  geocoding.py  main.py  model_config.py  nlp_logger.py  orchestrator.py  pattern_registry.py  pdf_extractors.py  pdf_parser.py  pdf_text_extractor.py  quality_assessment.py  sentence_boundaries.py  spacy_coordinate_matcher.py  spacy_multiword_location_matcher.py  spacy_spatial_relation_matcher.py  spacy_study_site_dependency_matcher.py  spacy_table_matcher.py  spacy_text_processing.py  table_extractor.py  text_processing.py
backend/app/nlp/data/: geographic_locations.jsonl  location_prepositions.json  site_nouns.json  spatial_relations.json  study_verbs.json
backend/app/tasks/: __init__.py  download.py  extract.py
backend/app/tests/: conftest.py  factories.py
backend/app/tests/api/routes/: test_items.py  test_login.py
backend/app/tests/scripts/: test_backend_pre_start.py
backend/app/tests/utils/: item.py  user.py
backend/tests/: README_PHASE1_TESTS.md  conftest.py  factories.py
backend/tests/api/routes/: test_items.py  test_login.py  test_private.py  test_task_status.py  test_users.py
backend/tests/crud/: test_user.py
backend/tests/nlp/: test_clustering.py  test_coordinate_decimal_conversion.py  test_input_data_quality_improvements.py  test_pdf_text_extractor.py  test_phase1_improvements.py  test_pipeline_integration.py  test_spacy_coordinate_matcher.py  test_spatial_relation_matcher.py  test_study_site_extraction.py
backend/tests/scripts/: test_backend_pre_start.py  test_test_pre_start.py
backend/tests/tasks/: test_extract.py
backend/tests/utils/: item.py  user.py  utils.py
documents/: kick-off.pptx
frontend/: .gitignore  .oxlintrc.json  .prettierignore  Dockerfile  Dockerfile.prod  README.md  auto-imports.d.ts  codebook.toml  components.d.ts  env.d.ts  eslint.config.mjs  index.html  package.json  pnpm-lock.yaml  prettier.config.mts  tsconfig.app.json  tsconfig.json  vite.config.mts  vitest.config.mts  vitest.config.ts
frontend/src/: App.vue  auto-imports.d.ts  components.d.ts  main.ts  typed-router.d.ts
frontend/src/components/: GraphView.vue  NodeInfoDialog.vue  TagCreateDialog.vue
frontend/src/composables/: useGraphComposable.js  useGraphComposable.ts
frontend/src/pages/: Account.vue  ForgotPassword.vue  Graph.vue  Home.vue  Items.vue  Login.vue  Map.vue  NotFound.vue  PaperDetail.vue  Papers.vue  Profile.vue  Register.vue  Tasks.vue  index.vue
frontend/src/plugins/: vuetify.ts
frontend/src/router/: index.ts
frontend/src/services/: api.ts
frontend/src/store/: index.js
frontend/src/stores/: auth.ts  notification.ts  papers.ts  studySites.ts  tags.ts  tasks.ts  zotero.ts
frontend/src/test/: setup.js
frontend/src/tests/: setup.ts
maress/: config.py
poster/: codebook.toml  poster.fdb_latexmk  poster.fls  poster.tex
(+18 files in other folders)
