[project]
dependencies = [
  "fastapi[standard-no-fastapi-cloud-cli]>=0.119.0,<1.0.0",
  "python-multipart<1.0.0,>=0.0.20",
  "email-validator<3.0.0,>=2.3.0",
  "tenacity>=9.1.0",
  "pydantic<3.0.0,>=2.12.0",
  "pydantic-settings<=3.0.0,>=2.11.0",
  "pydantic-extra-types[pycountry]>=2.10.5",
  "emails<1.0,>=0.6",
  "jinja2<4.0.0,>=3.1.0",
  "alembic>=1.17.0,<2.0.0",
  "httpx<1.0.0,>=0.28.0",
  "psycopg[binary]<4.0.0,>=3.2.9",
  "sqlmodel<1.0.0,>=0.0.27",
  "pwdlib[argon2]>=0.2.1",
  "pyjwt<3.0.0,>=2.10.0",
  "camelot-py[ghostscript]>=1.0.0",
  "geopy>=2.4.1",
  "pypdf>=5.9.0",
  "python-magic>=0.4.27",
  "pyzotero>=1.7.0",
  "scikit-learn>=1.7.1",
  "spacy>=3.8.7",
  "en-core-web-lg @ https://github.com/explosion/spacy-models/releases/download/en_core_web_lg-3.8.0/en_core_web_lg-3.8.0-py3-none-any.whl",
  "en_core_web_trf @ https://github.com/explosion/spacy-models/releases/download/en_core_web_trf-3.8.0/en_core_web_trf-3.8.0-py3-none-any.whl",
  "yara-python>=4.5.4",
  "spacy-layout>=0.0.12",
  "alembic-postgresql-enum>=1.8.0",
  "celery[redis]>=5.5.3",
  "redis>=5.2.1",
  "flower>=2.0.1",
]
description = "Add your description here"
name = "maress"
readme = "README.md"
requires-python = ">=3.12,<3.13"
version = "0.1.0"

[dependency-groups]
dev = [
  "celery-types>=0.23.0",
  "coverage>=7.11.0",
  "ipython>=9.6.0",
  "pandas-stubs<=2.3.2.2509026",
  "polyfactory>=2.22.1",
  "pre-commit>=4.3.0",
  "pytest-cov>=7.0.0",
  "pytest>=8.1.0",
  "types-jinja2>=2.11.9",
]

[build-system]
build-backend = "hatchling.build"
requires      = ["hatchling"]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.mypy]
exclude = ["venv", ".venv", "alembic"]
strict  = true

[tool.ruff]
exclude        = ["alembic"]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
future-annotations = true
fixable = ["ALL"]
ignore = [
  "E501",  # line too long, handled by black
  "B008",  # do not perform function calls in argument defaults
  "TC001", # Ignore "imported but unused" when inside TYPE_CHECKING blocks
	"TC003", # Do not move imports into type checking block (may be needed for model eval)
  "B904",  # Allow raising exceptions without from e, for HTTPException
	"UP037", # Allow usage of quoted type hints (needed for SQLModel and pydantic models)
]
select = [
  "A",     # flake8-builtins
  "ANN",   # flake8-annotations
  "ARG",   # unused arguments in functions
  "ASYNC", # flake8-async
  "B",     # flake8-bugbear
  "BLE",   # flake8-blind-except
  "C4",    # flake8-comprehensions
  "COM",   # flake8-commas
  "D",     # pydocstyle
  "DOC",   # docstring
  "DTZ",   # flake8-datetimez
  "E",     # pycodestyle errors
  "EM",    # flake8-err-msg
  "F",     # pyflakes
  "FA",    # future annotations
  "FAST",  # fastapi-specific linting rules
  "FBT",   # flake8-boolean-trap
  "FIX",   # FIXME
  "FLY",   # flynt
  "FURB",  # refurb
  "G",     # flake8-logging-format
  "I",     # isort
  "I",     # isort
  "ICN",   # flake8-import-conventions
  "INP",   # flake8-implicit-namespaces
  "INT",   # flake8-gettext
  "ISC",   # flake8-implicit-str-concat
  "LOG",   # flake8-logging
  "N",     # flake8 naming conventions
  "N",     # naming conventions
  "NPY",   # numpy
  "PD",    # pandas
  "PERF",  # performance
  "PIE",   # flake8-pie
  "PL",    # pylint
  "PT",    # flake8-pytest-style
  "PTH",   # flake8-pathlib
  "Q",     # flake8-quotes
  "RET",   # flake8-return
  "RSE",   # flake8-raise
  "RUF",   # ruff
  "S",     # flake8-bandit (security lints)
  "SIM",   # flake8-simplify
  "TC",    # flake8-typechecking
  "TD",    # flake8-todos
  "TRY",   # tryceratops
  "UP",    # pyupgrade
  "W",     # pycodestyle warnings
  "YTT",   # flake8-2020
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
	"S101",
	"D",
	"PLC0415",
	"ARG001",  # allow unused args in tests
	"PLR2004", # allow magic numbers in tests
]
"app/models/*.py" = [
	"D101",    # Ignore missing docstrings in models
	"N815",    # Allow mixedCase model names
]
"app/api/routes/*.py" = [
	"D101",    # Ignore missing docstrings in route handlers
	"ANN401",  # Allow Any type in route handlers
	"ANN201",  # Allow missing return type in route handlers
]
"app/crud/*.py" = [
	"D103",    # Ignore missing docstrings in CRUD modules
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
docstring-code-line-length = 100
docstring-code-format = true

[tool.basedpyright]
reportExplicitAny      = false
reportUnusedCallResult = false
completeFunctionParens = false

[tool.pytest.ini_options]
addopts = [
  "--cov=app",
  "--cov-report=term-missing",
  "--cov-report=html:coverage_html_report",
]

[tool.coverage.run]
source = ["app"]
dynamic_context = "test_function"

[tool.coverage.report]
show_missing = true
sort = "-Cover"

[tool.coverage.html]
show_contexts = true

[tool.ty.environment]
root = ["./app"]
